[package]
name = "fflag-macro"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
attohttpc = "0.28.0"
fflag-proc-macro = { version = "0.1.0", path = "fflag-proc-macro" }
lazy_static = "1.4.0"
proc-macro2 = "1.0.83"
serde = { version = "1.0.202", features = ["derive"] }
serde_json = "1.0.117"

[[example]]
name = "example"
crate-type = [ "bin" ]
